# LEAP

./: .gitignore  CMakeLists.txt  pixi.toml
src/: filtered_backprojection.cpp  leapctype.py  tomographic_models_c_interface.h
